[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4"
env_logger = "0.9.0"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34.7"
sled-extensions = { version = "0.2.0", features = ["bincode"]}
